apps/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: cluster
spec:
  parentRefs:
    - name: default-gateway
      namespace: cluster
  hostnames:
    - argocd.anyflow.net
  rules:
    - matches:
        - path:
            type: PathPrefix #Implementation-specific, PathPrefix, Exact
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
